WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74609
[BlackBerry] Backingstore can get into bad state with invalid matrix
https://bugs.webkit.org/show_bug.cgi?id=74609
Summary
[BlackBerry] Backingstore can get into bad state with invalid matrix
Adam Treat
Reported
2011-12-15 08:21:12 PST
Created
attachment 119429
[details]
Bugfix PR 122703 For certain configurations of webpage content and zoom level we were failing to produce a valid backingstore matrix by being to strict on whether a given matrix fits the preferred matrix orientation. This patch fixes this by insisting on storing a candidate divisor whether or not it agrees with the preferred matrix orientation and then comparing all subsequent divisors.
Attachments
Bugfix
(5.23 KB, patch)
2011-12-15 08:21 PST
,
Adam Treat
no flags
Details
Formatted Diff
Diff
Bug
(5.21 KB, patch)
2011-12-15 08:25 PST
,
Adam Treat
no flags
Details
Formatted Diff
Diff
Bugfix v2
(5.21 KB, patch)
2011-12-15 08:26 PST
,
Adam Treat
rwlbuis
: review-
Details
Formatted Diff
Diff
Bugfix v3 now with ChangeLog!
(6.36 KB, patch)
2011-12-15 08:33 PST
,
Adam Treat
no flags
Details
Formatted Diff
Diff
Bugfix v4 removing useless '()'
(6.35 KB, patch)
2011-12-15 08:34 PST
,
Adam Treat
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2011-12-15 08:23:06 PST
Attachment 119429
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/BackingStore...." exit_code: 1 Source/WebKit/blackberry/Api/BackingStore.cpp:101: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 1 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Treat
Comment 2
2011-12-15 08:25:47 PST
Created
attachment 119430
[details]
Bug
Adam Treat
Comment 3
2011-12-15 08:26:19 PST
Created
attachment 119431
[details]
Bugfix v2 Fix style
Rob Buis
Comment 4
2011-12-15 08:27:45 PST
Comment on
attachment 119431
[details]
Bugfix v2 Need a ChangeLog!
Adam Treat
Comment 5
2011-12-15 08:33:33 PST
Created
attachment 119433
[details]
Bugfix v3 now with ChangeLog! Been so long that I forgot I had to add my own ChangeLog :)
Adam Treat
Comment 6
2011-12-15 08:34:55 PST
Created
attachment 119434
[details]
Bugfix v4 removing useless '()' This is fun!
Rob Buis
Comment 7
2011-12-15 08:38:12 PST
Comment on
attachment 119434
[details]
Bugfix v4 removing useless '()' Looks good.
WebKit Review Bot
Comment 8
2011-12-15 09:33:18 PST
Comment on
attachment 119434
[details]
Bugfix v4 removing useless '()' Clearing flags on attachment: 119434 Committed
r102949
: <
http://trac.webkit.org/changeset/102949
>
WebKit Review Bot
Comment 9
2011-12-15 09:33:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug